--- a/html/pages/det.html
+++ b/html/pages/det.html
@@ -3,7 +3,7 @@
 
 <head>
   <!-- Title -->
-  <title>Terms &amp; Conditions | Front - Responsive Website Template</title>
+  <title>DET</title>
 
   <!-- Required Meta Tags Always Come First -->
   <meta charset="utf-8">
@@ -70,7 +70,7 @@
         <div id="navBar" class="collapse navbar-collapse">
           <ul class="navbar-nav">
               <li class="navbar-nav-item mr-2">
-                  <a href="#" class="nav-link">Home</a>
+                  <a href="index.html" class="nav-link">Home</a>
               </li>
             <!-- Services -->
             <li class="hs-has-sub-menu navbar-nav-item">
