--- a/html/pages/oet.html
+++ b/html/pages/oet.html
@@ -3,7 +3,7 @@
 
 <head>
   <!-- Title -->
-  <title>Course | Front - Responsive Website Template</title>
+  <title>OET</title>
 
   <!-- Required Meta Tags Always Come First -->
   <meta charset="utf-8">
@@ -125,7 +125,7 @@
   
                           <!-- Promo Item -->
                           <div class="navbar-promo-card navbar-promo-item">
-                            <a class="navbar-promo-link" href="#">
+                            <a class="navbar-promo-link" href="det.html">
                               <div class="media align-items-center">
                                 <img class="navbar-promo-icon" src="../../assets/img/det.png" alt="SVG">
                                 <div class="media-body">
